--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "pgknexlove",
   "main": "index.js",
   "version": "1.0.10",
+  "repository": "github:seveibar/pgknexlove",
   "scripts": {
     "test": "ava tests/**.test.js"
   },
   "dependencies": {
-    "knex": "^0.21.4",
-    "pg": "^8.3.0"
+    "knex": "^0.21.6",
+    "pg": "^8.4.1"
   },
   "devDependencies": {
     "ava": "^3.11.1"
