--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "knex": "^0.21.6",
-    "pg": "7"
+    "pg": "^8.5.1",
+    "pg-connection-string": "^2.4.0"
   },
   "devDependencies": {
     "@semantic-release/git": "^9.0.0",
