--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "ava tests/**.test.js"
   },
   "dependencies": {
+    "debug": "^4.3.2",
     "knex": "^0.95.10",
     "pg": "^8.5.1",
     "pg-connection-string": "^2.4.0"
